# crawler

./: .gitignore  .pylintrc  LICENCE  README.md  pyproject.toml  requirements-dev.txt
crawler/: crawler.py  worker.py
tests/: test_crawler.py  test_worker.py
tests/data/: find_links.html  meta_robots.html  meta_robots_none.html  robots.txt  test.html  test_find_links.html  test_relative_link_handling.html  test_same_subdomain_only.html
